--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 .container-fluid {
-    height: 80vh;
     border: 1px solid blue;
+    height: 95vh
 }
 .row {
-    height: 100%;
+    height: 50%;
+    border: 1px solid green;
 }
+
 .col-4 {
     border: 1px solid red;
     height: 100%;
+}
+.col-6 {
+    border: 1px solid red;
 }
 .scroller-hide::-webkit-scrollbar {
     display: none;
 }
 .scroller-col {
-    max-height: 50vh;   
+    max-height: 23vh;   
 }
 li {
     list-style-type: none;
